# social_network

./: .gitignore  manage.py  pyproject.toml
api/: __init__.py  admin.py  apps.py  models.py  permissions.py  tests.py  urls.py  views.py
api/migrations/: __init__.py
api/serializers/: __init__.py  messages.py  photos.py  users.py
api/views/: __init__.py  messages.py  photos.py  users.py
chat/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_initial.py  0003_alter_conversation_options_alter_message_options_and_more.py
messages/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
messages/migrations/: __init__.py
photos/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
photos/migrations/: 0001_initial.py  0002_initial.py  __init__.py
social_network/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
social_network.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/css/: base.css
static/js/: main.js
templates/: base.html
templates/chat/: conversation.html  inbox.html
templates/messages/: conversation.html  inbox.html
templates/photos/: photo_confirm_delete.html  photo_detail.html  photo_list.html  upload_photo.html
templates/users/: home.html  login.html  profile.html  profile_edit.html  register.html
users/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_customuser_created_at.py  __init__.py
